--- a/src/style.css
+++ b/src/style.css
@@ -11,3 +11,7 @@
 html {
   @apply transition-colors duration-250 bg-neutral-100 black:bg-neutral-800;
 }
+
+:root {
+  --color-secondary: #41b883;
+}
