--- a/src/style.css
+++ b/src/style.css
@@ -9,9 +9,13 @@
 @custom-variant light (&:where([data-theme=light], [data-theme=light] *));
 
 html {
-  @apply transition-colors duration-250 bg-neutral-100 black:bg-neutral-800;
+  @apply transition-colors duration-100 bg-neutral-100 black:bg-neutral-800;
 }
 
 :root {
   --color-secondary: #41b883;
+}
+
+@theme {
+  --color-dg: #34495e;
 }
